#9: Add jpackage maven plugin