@@ -137,6 +137,27 @@
                     <argLine>--enable-preview</argLine>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.panteleyev</groupId>
+                <artifactId>jpackage-maven-plugin</artifactId>
+                <version>1.5.1</version>
+                
+                <configuration>
+                    <name>flight-events</name>
+                    <input>${project.build.directory}/dist</input>
+                    <destination>${project.build.directory}/install</destination>
+                    <winConsole>true</winConsole>
+                    <addModules>java.base,java.datatransfer,java.logging,java.xml,java.management,java.naming,java.desktop,java.instrument,jdk.unsupported</addModules>
+                    <mainJar>${project.parent.artifactId}-${project.artifactId}-exec.jar</mainJar>
+                    <temp>${project.build.directory}/temp-package</temp>
+                    <javaOptions>
+                        <option>--enable-preview</option>
+                        <option>-Dspring.config.import=file:./app/settings.yaml</option>
+                    </javaOptions>
+                    <winDirChooser>true</winDirChooser>
+                    <appVersion>0.0.2</appVersion>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
     
